cargo-features = ["edition", "rename-dependency"]

[package]
name = "f3_eva"
version = "0.1.0"
authors = ["Roma Sokolov", "Alexander Zhuravlev"]
edition = '2018'

[profile.dev]
panic = "abort"
debug = true
opt-level = "s"
lto = true
codegen-units = 1
incremental = false
overflow-checks = false # libm

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = false
lto = true
incremental = false # nalgebra

[dependencies]
nb = "0.1.1"
cortex-m = {version = "0.5.7", features = ["inline-asm", "const-fn"]}
mpu9250 = "0.6.3"
libm = "0.1.2"
dcmimu = "0.2.1"
cortex-m-rt = "0.6.3"

[dependencies.ehal]
features = ["unproven"]
version = "0.2.1"
package = "embedded-hal"

[dependencies.hal]
version = "0.8.3"
package = "alt-stm32f30x-hal"
features = ["rt"]

[dependencies.nalgebra]
default-features = false
version = "0.16.0"

[features]
usart1 = []
usart2 = []
infolog = []
debuglog = []
