[package]
name = "f3_eva"
version = "0.1.0"
authors = ["Roma Sokolov", "Alexander Zhuravlev"]
edition = '2018'

[profile.dev]
panic = "abort"
debug = true
opt-level = "s"
lto = true
codegen-units = 1
incremental = false
overflow-checks = false # libm

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = true
lto = true
incremental = false # nalgebra

[dependencies]
nb = "0.1.1"
cortex-m = {version = "0.6.0", features = ["inline-asm", "const-fn"]}
mpu9250 = "0.20"
asm-delay = "0.5.2"
# mpu9250 = {path = "../mpu9250"}
libm = "0.1.2"
dcmimu = "0.2.1"
cortex-m-rt = "0.6.8"
lsm303c = "0.2"
bmp280 = {version = "0.0.3", package="bmp280-ehal"}
shared-bus = {version = "0.1.2", features = ["cortexm"]}
vl53l0x = "0.2.0"


[dependencies.ehal]
features = ["unproven"]
version = "0.2.3"
package = "embedded-hal"

[dependencies.hal]
version = "0.20"
# path = "../alt-stm32f30x-hal"
package = "alt-stm32f30x-hal"
features = ["rt", "stm32f303"]

[dependencies.nalgebra]
default-features = false
version = "0.18"

[features]
usart1 = []
usart2 = []
infolog = []
debuglog = []
