[package]
name = "f3_eva"
version = "0.1.0"
authors = ["Roma Sokolov", "Alexander Zhuravlev"]
edition = '2018'

[profile.dev]
panic = "abort"
debug = true
opt-level = "s"
lto = true
codegen-units = 1
incremental = false
overflow-checks = false # libm

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
debug = true
lto = true
incremental = false # nalgebra

[dependencies]
nb = "1.0.0"
cortex-m = "0.7.5"
mpu9250 = "0.24.0"
asm-delay = "0.9.0"
# mpu9250 = {path = "../mpu9250"}
libm = "0.2.2"
dcmimu = "0.2.2"
cortex-m-rt = "0.7.1"
lsm303c = "0.2.0"
bmp280 = { version = "0.0.5", package = "bmp280-ehal" }
shared-bus = { version = "0.2.3", features = ["cortex-m"] }
vl53l0x = "0.3.1"


[dependencies.ehal]
features = ["unproven"]
version = "0.2.7"
package = "embedded-hal"

[dependencies.hal]
version = "0.42.0"
package = "alt-stm32f30x-hal"
features = ["rt", "stm32f303"]

[dependencies.nalgebra]
default-features = false
features = ["libm", "libm-force"]
version = "0.31.0"

[features]
usart1 = []
usart2 = []
infolog = []
debuglog = []
